# POO2021-2JPCM

./: DetalleFactura.h  Reporte.cpp  Reporte.h  Tienda.h  index.html  makefile
AltosNizaPruebasCompleto/src/Model/: Admin.cpp  Admin.h  Fundador.cpp
AltosNizaPruebasCompleto/test/: AdminTest.cpp  CMakeLists.txt  PropietarioTest.cpp
CasinoEstudiantes/: CMakeLists.txt
CasinoEstudiantes/Model/: Adivinador.cpp  Adivinador.h  Casino.cpp  Casino.h
EDIFICIO/: CMakeLists.txt
doc/: Tienda.cpp  View.cpp  View.h
